# pointcloud-plane-segmentation

./: CMakeLists.txt  README.md
include/: utils.h
include/patchwork/: patchwork.hpp
include/rspd/: planarpatch.h  planedetector.h
src/: main.cpp
